fix: overflow on hover on first transfer item

--- a/src/client/pages/transaction/components/transfers/transfers.css
+++ b/src/client/pages/transaction/components/transfers/transfers.css
@@ -15,4 +15,5 @@
     flex: 0 1 auto;
     min-height: 0;
     overflow: auto;
+    padding-top: .3rem;
 }
